syntax = "proto3";

package proto_data_schema;

message Coordinates {
    double lat = 1;
    double lng = 2;
}

message Stop {
    string name = 1;
    Coordinates coordinates = 2;
}

message Bus {
    string name = 1;
    repeated string route = 2;
    bool is_roundtrip = 3;
}