syntax = "proto3";

package proto_schema.transport;

import "map_renderer.proto";
import "transport_router.proto";

message Coordinates {
    double lat = 1;
    double lng = 2;
}

message Stop {
    string name = 1;
    Coordinates coordinates = 2;
}

message Bus {
    string name = 1;
    repeated string route = 2;
    bool is_roundtrip = 3;
}

message DistancesBetweenStops {
    string from_stop = 1;
    string to_stop = 2;
    double distance = 3;
}

message TransportData {
    repeated Stop stops = 1;
    repeated Bus buses = 2;
    repeated DistancesBetweenStops distances = 3;
}

message Settings {
    proto_schema.maps.RenderSettings render_settings = 1;
    proto_schema.router.RoutingSettings routing_settings = 2;
}

message Database {
    TransportData transport_data = 1;
    Settings settings = 2;
    proto_schema.router.Router router = 3;
}